--- a/serverless.yml
+++ b/serverless.yml
@@ -27,6 +27,7 @@ package:
 provider:
   name: aws
   runtime: python3.8
+  stage: dev
   region: us-east-1
   iamRoleStatements:
     - Effect: "Allow"
